Ensure '+ Add Property' button is visible. Addresses issue in which the button is never visible when no file properties already exist on currently viewed file.

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1599,14 +1599,7 @@ body:not(.hide-frontmatter-off) .metadata-properties-heading {
 body:not(.is-mobile) {
   .metadata-add-button {
     display: flex;
-    transition: var(--anim-duration-fast) var(--anim-duration-moderate);
     cursor: pointer;
-  }
-
-  .metadata-container:not(:hover) .metadata-add-button {
-    visibility: hidden;
-    opacity: 0;
-    height: 0;
   }
 
   .prompt.suggestion {
